# OOkurssi2026

./: README.md
3vktunnillaKoodausEsim/: CMakeLists.txt  father.cpp  father.h  main.cpp  sun.cpp  sun.h
HarjOhjelmointiprojektiin/: CMakeLists.txt  card.cpp  card.h  card.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pin.cpp  pin.h  pin.ui
KertausehtKok/: CMakeLists.txt  kertausta.cpp  kertausta.h  main.cpp
Kokeeseen/: CMakeLists.txt  main.cpp
LuentotehtavaRandom/: lcd.cpp  lcd.h  main.cpp
Oliohjelmointi1/: CMakeLists.txt  main.cpp
Oliohjelmointi1/LuentotehtavaRandom/: mittari.h  random.cpp  random.h
Oliohjelmointi1/OOhjelmointiviikko1/: CMakeLists.txt  main.cpp
Oliohjelmointi1/Teht1/: main.cpp
Oliohjelmointi1/Teht2/: CMakeLists.txt  dht.cpp  dht.h  mittari.cpp
Oliohjelmointi1/Viikko2teht/: game.h
Qtkonsolisovellus/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
Viikko2teht/: CMakeLists.txt  game.cpp  main.cpp
Viikko3/: chef.cpp  italianchef.cpp  italianchef.h  main.cpp
Viikko4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Viikko5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikko6/Viikko6Standardikirjasto/: CMakeLists.txt  main.cpp  student.cpp  student.h
Viikko6/Viikon6esim/: CMakeLists.txt  main.cpp  student.cpp  student.h
Viikko7/Teht1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko7/Teht2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
